--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,9 @@ jobs:
     #     e.g, 
     outputs:
       output1: ${{ steps.changed-files.outputs.changed_files }}
-      matrix: ${{ steps.changed-files.outputs.matrix }}
-      matrix2: ${{ steps.run_script.outputs.dynamic_list }}
+      matrix: ${{ steps.run_script.outputs.dynamic_list }}
+    env:
+      NBS_MODULE_MATRIX_NAME: "MODULES_MATRIX"    # defines the variable name in GITHUB_OUTPUT that the python modules script outputs the data to
     steps:
       - id: checkout-codebase
         uses: actions/checkout@v4
@@ -33,20 +34,10 @@ jobs:
             # Pushes output to $GITHUB_OUTPUT so it can be used in other jobs/steps
             if ${{ github.event_name == 'pull_request' }}; then
                 echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
-                export CHANGED_MODULES=$( git diff --name-only origin/$GITHUB_BASE_REF ${{ github.event.after }} -- modules | grep -E 'modules/.*/' | cut -d/ -f2 | uniq)
             else
                 echo "changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
                 # | grep -v 'modules/common/' # allows exclusion of certain folders
-                export CHANGED_MODULES=$( git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- modules | grep -E 'modules/.*/'  | cut -d/ -f2 | uniq)
             fi
-            echo "$CHANGED_MODULES"
-            # Get all the modules that have a "tests" directory
-            MODULES_WITH_TESTS=$(find modules/ -type d -name "tests" -printf '%h\n' | cut -d/ -f2 | uniq)
-            # Create our json structure [{"module_name": "source", "has_tests": false|true}]
-            MODULES_JSON=$(echo "$CHANGED_MODULES" | jq -R -s -c --argjson modulesWithTests "$(echo "$MODULES_WITH_TESTS" | jq -R -s 'split("\n")[:-1]')" 'split("\n")[:-1] | map({module_name: ., has_tests: (. as $module | $modulesWithTests | any(. == $module))})')
-            # Export the modules as json to the outputs
-            echo "matrix=$(echo "$MODULES_JSON")" >> $GITHUB_OUTPUT
-            echo "json: $MODULES_JSON"
       - name: bash handle module files
         id: bash-modules
         run: |
@@ -89,34 +80,24 @@ jobs:
           python-version: 3.12
       - name: Run script
         id: run_script
-        #shell: bash
         env:
             SEMVER: ${{ steps.version_step.outputs.MajorMinorPatch }}
             CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
         run: |
             # causes failure if python script fails
             set -e
+
+            echo "ENV TEST: ${{ NBS_MODULE_MATRIX_NAME }}"
+            # Note, -o defines the name of a variable that is added to GITHUB_OUTPUT with the python script output
             python3 .github/scripts/test.py -f "$CHANGED_FILES" -o "MODULES_MATRIX"
-            # check the python script exited ok (a python exception caught will trigger a sys.exit(1))
+
+            # check the python script exited ok (a python exception caught will trigger a sys.exit(1) and fail the step/workflow)
             if [[ $? = 0 ]]; then
                 echo "success"
             else
                 echo "failure: $?"
             fi
-
-            # echo "$SEMVER"
-            # # wrapped in quotes to make sure it is passed as a space separated string to python
-            # # writes output to Github Env as env.MODULES_JSON2
-            # # works # python3 .github/scripts/test.py -f "$CHANGED_FILES"
-            # export "MODULES_JSON2=$(python3 .github/scripts/test.py -f \\"$CHANGED_FILES\\" 2>&1)"
-
-            # echo "MODULES_JSON2: $MODULES_JSON2"
-            # ##echo "serverquery=$(python3 .github/scripts/test.py -f \\"$CHANGED_FILES\\" 2>&1)"
-            # #echo "matrix2=$(echo ${{ env.MODULES_JSON }})" >> $GITHUB_OUTPUT
-      #- run: |
-      #      echo "Module JSON output (env.MODULES_JSON2)            : ${{ env.MODULES_JSON2 }}"
       - run: |
-            echo "Module JSON output (env.MODULES_JSON2)            : ${{ env.MODULES_JSON2 }}"
             echo "MODULES_MATRIX          : ${{ steps.run_script.outputs.MODULES_MATRIX }}"
             echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
             echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
